feat(tests): add comprehensive integration and repository tests for Book entity
- Implemented BookIntegrationTest with CRUD operations, search functionalities, and validation tests.
- Developed BookRepositoryTest covering basic CRUD operations, searches by title, author, and category, as well as counting and existence checks.
- Created docker-compose configuration for running tests in a containerized environment.